# mnist-fpga

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE.FindVitis.cmake  README.md
Model/: mnist.h5  mnist.py
Public/mf/: ClFactory.hh  ClHelpers.hh  Config.hh  Exception.hh  File.hh  Mnist.hh  Weights.hh
Source/: ClFactory.cc  Config.cc  File.cc  Main.cc  Mnist.cc  Weights.cc
cmake/: FindVitis.cmake
